updated and fixed some bugs
