# docs/swagger.json
@@ -1010,13 +1010,46 @@
                 "summary": "Add a new product",
                 "parameters": [
                     {
-                        "description": "Product details",
-                        "name": "product",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.AddProduct"
-                        }
+                        "type": "integer",
+                        "name": "category_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "color",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "description",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "price",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "size_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "stock",
+                        "in": "formData",
+                        "required": true
                     },
                     {
                         "type": "file",
@@ -2919,9 +2952,6 @@
                     "type": "string"
                 },
                 "description": {
-                    "type": "string"
-                },
-                "imageurl": {
                     "type": "string"
                 },
                 "name": {
